--- a/teli.html
+++ b/teli.html
@@ -320,13 +320,14 @@
     // 🔧 CONFIGURE FIREBASE HERE
     // ======================
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+  apiKey: "AIzaSyBhwMJdFGmbxE8nAVKPyRJJzuHn6xmyI7Q",
+  authDomain: "cricketteligram.firebaseapp.com",
+  projectId: "cricketteligram",
+  storageBucket: "cricketteligram.firebasestorage.app",
+  messagingSenderId: "1081096021896",
+  appId: "1:1081096021896:web:07d01b9f249e8505993c3d",
+  measurementId: "G-WCBX1VZD65"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
