--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>🏏 CricketStream Pro</title>
 
-<!-- MONETAG SDK -->
-<script src="//libtl.com/sdk.js" data-zone="10340427" data-sdk="show_10340427"></script>
+<!-- MONETAG -->
+<script src="//libtl.com/sdk.js"
+  data-zone="10340427"
+  data-sdk="show_10340427"></script>
 
-<!-- TELEGRAM SDK -->
+<!-- TELEGRAM -->
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <style>
 body {
   margin:0;
   font-family: system-ui, sans-serif;
-  background:#062e16;
+  background:#052e16;
   color:#fff;
 }
 .hidden { display:none; }
 
 header {
   padding:14px;
-  background:#0008;
   text-align:center;
   font-weight:700;
+  background:#0008;
 }
 
 .section {
   margin:14px;
   padding:14px;
-  background:#ffffff10;
+  background:#ffffff12;
   border-radius:12px;
 }
 
@@ -40,16 +42,7 @@ button {
   padding:12px 16px;
   border-radius:10px;
   font-weight:600;
-}
-
-.ad {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-top:10px;
-  background:#0006;
-  padding:12px;
-  border-radius:10px;
+  cursor:pointer;
 }
 
 .loading {
@@ -64,6 +57,27 @@ button {
 }
 .loading.show { display:flex; }
 
+.spinner {
+  width:40px;
+  height:40px;
+  border:4px solid #ffffff33;
+  border-top-color:#22c55e;
+  border-radius:50%;
+  animation:spin 1s linear infinite;
+  margin-bottom:12px;
+}
+@keyframes spin { to { transform:rotate(360deg); } }
+
+.ad {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-top:10px;
+  background:#0006;
+  padding:12px;
+  border-radius:10px;
+}
+
 iframe {
   width:100%;
   height:100vh;
@@ -76,115 +90,122 @@ iframe {
 
 <header>🏏 CricketStream Pro</header>
 
+<!-- LOADING -->
+<div id="loading" class="loading">
+  <div class="spinner"></div>
+  <div id="loadingText">Loading…</div>
+</div>
+
 <!-- LOGIN -->
 <div id="login" class="section">
-  <p>Login required to continue</p>
-  <button onclick="login()">Login with Telegram</button>
+  <p>Login to continue</p>
+  <button onclick="login()">Login</button>
 </div>
 
 <!-- DASHBOARD -->
 <div id="dashboard" class="hidden">
 
   <div class="section">
-    <b>User:</b> <span id="user"></span><br>
+    <b>User:</b> <span id="userName"></span><br>
     <b>Minutes:</b> <span id="minutes">0</span>
   </div>
 
-  <!-- EARN WAYS -->
   <div class="section">
     <h3>🎯 Earn Minutes</h3>
-
     <div class="ad">
       <div>
-        <b>Rewarded Video</b><br>
+        <b>Rewarded Ad</b><br>
         +3 minutes
       </div>
       <button onclick="watchAd()">Watch</button>
     </div>
   </div>
 
-  <!-- STREAM -->
   <div class="section">
     <h3>📺 Watch Stream</h3>
-    <input id="streamUrl" placeholder="Paste stream URL"
+    <input id="streamUrl"
+      placeholder="Paste stream URL"
       style="width:100%;padding:10px;border-radius:8px;border:none">
     <button style="margin-top:10px" onclick="openStream()">Open Stream</button>
   </div>
 
 </div>
 
-<!-- LOADING -->
-<div id="loading" class="loading">
-  <p>Loading Ad…</p>
-</div>
-
-<!-- STREAM VIEW -->
+<!-- STREAM -->
 <div id="viewer" class="hidden">
   <button onclick="closeStream()" style="margin:10px">⬅ Back</button>
   <iframe id="frame"></iframe>
 </div>
 
 <script>
-/* =====================
-   GLOBAL STATE
-===================== */
-let tgUser = null;
+/* ========= STATE ========= */
+let user = null;
 let minutes = 0;
-let lastAdTime = 0;
-const COOLDOWN = 6 * 60 * 1000; // 6 minutes
+let lastAd = 0;
+const COOLDOWN = 6 * 60 * 1000;
 
-/* =====================
-   AUTH
-===================== */
-function login() {
-  const tg = window.Telegram.WebApp;
-  tg.ready();
+/* ========= UI ========= */
+const loading = document.getElementById('loading');
+const loadingText = document.getElementById('loadingText');
 
-  if (!tg.initDataUnsafe.user) {
-    alert("Open inside Telegram");
-    return;
-  }
-
-  tgUser = tg.initDataUnsafe.user;
-  document.getElementById('user').innerText =
-    tgUser.username || tgUser.first_name;
-
-  document.getElementById('login').classList.add('hidden');
-  document.getElementById('dashboard').classList.remove('hidden');
+function showLoading(text) {
+  loadingText.innerText = text;
+  loading.classList.add('show');
+}
+function hideLoading() {
+  loading.classList.remove('show');
 }
 
-/* =====================
-   EARN LOGIC
-===================== */
+/* ========= AUTH ========= */
+function login() {
+  showLoading("Authenticating…");
+
+  setTimeout(() => {
+    const tg = window.Telegram?.WebApp;
+    tg?.ready();
+
+    if (tg?.initDataUnsafe?.user) {
+      user = tg.initDataUnsafe.user;
+    } else {
+      // Browser fallback (TEST MODE)
+      user = { username: "TestUser" };
+    }
+
+    document.getElementById('userName').innerText =
+      user.username || "User";
+
+    document.getElementById('login').classList.add('hidden');
+    document.getElementById('dashboard').classList.remove('hidden');
+
+    hideLoading();
+  }, 800);
+}
+
+/* ========= EARN ========= */
 function watchAd() {
-  const now = Date.now();
-  if (now - lastAdTime < COOLDOWN) {
+  if (Date.now() - lastAd < COOLDOWN) {
     alert("Ad cooldown active");
     return;
   }
 
   if (typeof show_10340427 !== 'function') {
-    alert("Ad not ready");
+    alert("Ad system not ready");
     return;
   }
 
-  document.getElementById('loading').classList.add('show');
+  showLoading("Loading advertisement…");
+  show_10340427();
 
-  show_10340427(); // Monetag call
-
-  // SAFE reward fallback
   setTimeout(() => {
-    document.getElementById('loading').classList.remove('show');
+    hideLoading();
     minutes += 3;
-    lastAdTime = Date.now();
+    lastAd = Date.now();
     document.getElementById('minutes').innerText = minutes;
-    alert("+3 minutes added");
+    alert("+3 minutes earned");
   }, 7000);
 }
 
-/* =====================
-   STREAM LOGIC
-===================== */
+/* ========= STREAM ========= */
 function openStream() {
   if (minutes < 3) {
     alert("Earn minutes first");
