--- a/index.html
+++ b/index.html
@@ -1,84 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
 <title>🏏 CricketStream Pro</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- MONETAG -->
-<script src="//libtl.com/sdk.js"
-  data-zone="10340427"
-  data-sdk="show_10340427"></script>
+<!-- Monetag -->
+<script src='//libtl.com/sdk.js'
+  data-zone='10340427'
+  data-sdk='show_10340427'></script>
 
-<!-- TELEGRAM -->
+<!-- Telegram -->
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <style>
 body {
   margin:0;
-  font-family: system-ui, sans-serif;
-  background:#052e16;
+  font-family:system-ui, sans-serif;
+  background:linear-gradient(180deg,#052e16,#022c22);
   color:#fff;
 }
-.hidden { display:none; }
+.hidden{display:none}
 
-header {
+header{
   padding:14px;
   text-align:center;
+  font-size:20px;
   font-weight:700;
   background:#0008;
 }
 
-.section {
+.section{
   margin:14px;
   padding:14px;
-  background:#ffffff12;
-  border-radius:12px;
+  background:#ffffff14;
+  border-radius:14px;
+  animation:fadeIn .4s ease;
 }
 
-button {
+button{
   background:#22c55e;
   border:none;
-  padding:12px 16px;
-  border-radius:10px;
-  font-weight:600;
+  padding:12px 18px;
+  border-radius:12px;
+  font-weight:700;
   cursor:pointer;
 }
 
-.loading {
+.ad-row{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:12px;
+  background:#0006;
+  border-radius:12px;
+}
+
+.loading{
   position:fixed;
   inset:0;
-  background:#000d;
+  background:#000c;
   display:none;
   align-items:center;
   justify-content:center;
   flex-direction:column;
   z-index:999;
 }
-.loading.show { display:flex; }
+.loading.show{display:flex}
 
-.spinner {
-  width:40px;
-  height:40px;
+.spinner{
+  width:42px;
+  height:42px;
   border:4px solid #ffffff33;
   border-top-color:#22c55e;
   border-radius:50%;
   animation:spin 1s linear infinite;
   margin-bottom:12px;
 }
-@keyframes spin { to { transform:rotate(360deg); } }
 
-.ad {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-top:10px;
-  background:#0006;
-  padding:12px;
-  border-radius:10px;
-}
+@keyframes spin{to{transform:rotate(360deg)}}
+@keyframes fadeIn{from{opacity:0;transform:translateY(8px)}to{opacity:1}}
 
-iframe {
+iframe{
   width:100%;
   height:100vh;
   border:none;
@@ -98,7 +101,7 @@ iframe {
 
 <!-- LOGIN -->
 <div id="login" class="section">
-  <p>Login to continue</p>
+  <p>Authenticate to continue</p>
   <button onclick="login()">Login</button>
 </div>
 
@@ -106,13 +109,15 @@ iframe {
 <div id="dashboard" class="hidden">
 
   <div class="section">
-    <b>User:</b> <span id="userName"></span><br>
-    <b>Minutes:</b> <span id="minutes">0</span>
+    <b>User:</b> <span id="uname"></span><br>
+    <b>UID:</b> <span id="uid"></span><br>
+    <b>Minutes:</b> <span id="minutes">0</span><br>
+    <b>Ads Watched:</b> <span id="ads">0</span>
   </div>
 
   <div class="section">
     <h3>🎯 Earn Minutes</h3>
-    <div class="ad">
+    <div class="ad-row">
       <div>
         <b>Rewarded Ad</b><br>
         +3 minutes
@@ -125,8 +130,8 @@ iframe {
     <h3>📺 Watch Stream</h3>
     <input id="streamUrl"
       placeholder="Paste stream URL"
-      style="width:100%;padding:10px;border-radius:8px;border:none">
-    <button style="margin-top:10px" onclick="openStream()">Open Stream</button>
+      style="width:100%;padding:10px;border-radius:10px;border:none">
+    <button style="margin-top:10px" onclick="openStream()">Open</button>
   </div>
 
 </div>
@@ -138,98 +143,146 @@ iframe {
 </div>
 
 <script>
-/* ========= STATE ========= */
+/* ================= STATE ================= */
 let user = null;
-let minutes = 0;
 let lastAd = 0;
 const COOLDOWN = 6 * 60 * 1000;
 
-/* ========= UI ========= */
-const loading = document.getElementById('loading');
-const loadingText = document.getElementById('loadingText');
+/* ================= HELPERS ================= */
+const $ = id => document.getElementById(id);
 
-function showLoading(text) {
-  loadingText.innerText = text;
-  loading.classList.add('show');
+function showLoading(t){
+  $('loadingText').innerText = t;
+  $('loading').classList.add('show');
 }
-function hideLoading() {
-  loading.classList.remove('show');
+function hideLoading(){
+  $('loading').classList.remove('show');
 }
 
-/* ========= AUTH ========= */
-function login() {
+function saveUser(){
+  localStorage.setItem('cs_user', JSON.stringify(user));
+}
+function loadUser(){
+  const u = localStorage.getItem('cs_user');
+  return u ? JSON.parse(u) : null;
+}
+
+/* ================= AUTH ================= */
+function login(){
   showLoading("Authenticating…");
 
   setTimeout(() => {
     const tg = window.Telegram?.WebApp;
     tg?.ready();
 
-    if (tg?.initDataUnsafe?.user) {
-      user = tg.initDataUnsafe.user;
+    let stored = loadUser();
+
+    if (stored) {
+      user = stored;
     } else {
-      // Browser fallback (TEST MODE)
-      user = { username: "TestUser" };
+      if (tg?.initDataUnsafe?.user) {
+        const tgu = tg.initDataUnsafe.user;
+        user = {
+          uid: String(tgu.id),
+          username: tgu.username || "tg_user",
+          minutes: 0,
+          ads: 0,
+          last_login: Date.now()
+        };
+      } else {
+        // Browser fallback
+        user = {
+          uid: crypto.randomUUID(),
+          username: "test_user",
+          minutes: 0,
+          ads: 0,
+          last_login: Date.now()
+        };
+      }
     }
 
-    document.getElementById('userName').innerText =
-      user.username || "User";
+    user.last_login = Date.now();
+    saveUser();
+    renderUser();
 
-    document.getElementById('login').classList.add('hidden');
-    document.getElementById('dashboard').classList.remove('hidden');
-
+    $('login').classList.add('hidden');
+    $('dashboard').classList.remove('hidden');
     hideLoading();
-  }, 800);
+  }, 600);
 }
 
-/* ========= EARN ========= */
-function watchAd() {
+function renderUser(){
+  $('uname').innerText = user.username;
+  $('uid').innerText = user.uid;
+  $('minutes').innerText = user.minutes;
+  $('ads').innerText = user.ads;
+}
+
+/* ================= MONETAG ================= */
+function watchAd(){
   if (Date.now() - lastAd < COOLDOWN) {
     alert("Ad cooldown active");
     return;
   }
 
   if (typeof show_10340427 !== 'function') {
-    alert("Ad system not ready");
+    alert("Ad SDK not ready");
     return;
   }
 
-  showLoading("Loading advertisement…");
-  show_10340427();
+  showLoading("Watching ad…");
+  let rewarded = false;
 
-  setTimeout(() => {
+  try {
+    const result = show_10340427('pop');
+
+    if (result && typeof result.then === 'function') {
+      result.then(() => rewardUser())
+            .catch(() => hideLoading());
+    } else {
+      // Fallback safety
+      setTimeout(rewardUser, 7000);
+    }
+  } catch {
     hideLoading();
-    minutes += 3;
+  }
+
+  function rewardUser(){
+    if (rewarded) return;
+    rewarded = true;
+
+    user.minutes += 3;
+    user.ads += 1;
     lastAd = Date.now();
-    document.getElementById('minutes').innerText = minutes;
+    saveUser();
+    renderUser();
+    hideLoading();
     alert("+3 minutes earned");
-  }, 7000);
+  }
 }
 
-/* ========= STREAM ========= */
-function openStream() {
-  if (minutes < 3) {
+/* ================= STREAM ================= */
+function openStream(){
+  if (user.minutes < 3) {
     alert("Earn minutes first");
     return;
   }
+  const url = $('streamUrl').value;
+  if (!url) return alert("Enter stream URL");
 
-  const url = document.getElementById('streamUrl').value;
-  if (!url) {
-    alert("Add stream URL");
-    return;
-  }
+  user.minutes -= 3;
+  saveUser();
+  renderUser();
 
-  minutes -= 3;
-  document.getElementById('minutes').innerText = minutes;
-
-  document.getElementById('dashboard').classList.add('hidden');
-  document.getElementById('viewer').classList.remove('hidden');
-  document.getElementById('frame').src = url;
+  $('dashboard').classList.add('hidden');
+  $('viewer').classList.remove('hidden');
+  $('frame').src = url;
 }
 
-function closeStream() {
-  document.getElementById('viewer').classList.add('hidden');
-  document.getElementById('dashboard').classList.remove('hidden');
-  document.getElementById('frame').src = '';
+function closeStream(){
+  $('viewer').classList.add('hidden');
+  $('dashboard').classList.remove('hidden');
+  $('frame').src = '';
 }
 </script>
 
