--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
+<!-- Load HLS locally if possible -->
+<script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.15/dist/hls.min.js"></script>
 </head>
 
 <body style="margin:0;background:black;">
@@ -13,6 +15,7 @@
   muted
   autoplay
   playsinline
+  webkit-playsinline
   style="width:100%;height:100vh;">
 </video>
 
@@ -20,15 +23,15 @@
 const video = document.getElementById("player");
 
 const STREAM =
-"https://hls-proxy.yourname.workers.dev/?url=" +
+"https://hls-proxy.samaraedirisooriya123.workers.dev/?url=" +
 encodeURIComponent(
-  "https://d7.merichunidya.com:1686/hls/willowusa.m3u8"
+  "https://d7.merichunidya.com:1686/hls/willowusa.m3u8?md5=uO4xAOa21opk2GMBh3-YaQ"
 );
 
-if (Hls.isSupported()) {
+if (window.Hls && Hls.isSupported()) {
   const hls = new Hls({
-    lowLatencyMode: true,
-    enableWorker: true
+    enableWorker: false,   // 🔥 fixes Edge / Telegram
+    lowLatencyMode: true
   });
   hls.loadSource(STREAM);
   hls.attachMedia(video);
