--- a/index.html
+++ b/index.html
@@ -1,42 +1,171 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8" />
+<title>Cricket Rewards</title>
 
-<!-- Load HLS locally if possible -->
-<script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.15/dist/hls.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+<!-- Monetag -->
+<script src="//libtl.com/sdk.js" data-zone="10340427" data-sdk="show_10340427"></script>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<style>
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background: linear-gradient(180deg,#0b1020,#050814);
+  color: #fff;
+}
+
+.app {
+  padding: 16px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card {
+  background: rgba(255,255,255,0.08);
+  border-radius: 16px;
+  padding: 16px;
+  margin-top: 14px;
+  animation: fadeUp .5s ease;
+}
+
+.btn {
+  width: 100%;
+  padding: 14px;
+  margin-top: 10px;
+  background: linear-gradient(135deg,#00c6ff,#0072ff);
+  border: none;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn:active {
+  transform: scale(0.97);
+}
+
+.loader {
+  display: none;
+  text-align: center;
+  margin-top: 10px;
+}
+
+@keyframes fadeUp {
+  from {opacity:0; transform:translateY(20px)}
+  to {opacity:1; transform:translateY(0)}
+}
+</style>
 </head>
 
-<body style="margin:0;background:black;">
+<body>
+<div class="app">
 
-<video id="player"
-  controls
-  muted
-  autoplay
-  playsinline
-  webkit-playsinline
-  style="width:100%;height:100vh;">
-</video>
+  <div class="header">
+    <h3>🏏 Cricket Rewards</h3>
+    <span id="username"></span>
+  </div>
+
+  <div class="card">
+    <h4>Total Earned</h4>
+    <p>⏱ Minutes: <b id="minutes">0</b></p>
+    <p>💰 Earnings: $<b id="earnings">0.00</b></p>
+  </div>
+
+  <div class="card">
+    <h4>Earn Minutes</h4>
+
+    <button class="btn" onclick="watchRewarded()">🎬 Watch Ad ( +2 min )</button>
+    <button class="btn" onclick="watchPopup()">🔥 Popup Ad ( +1 min )</button>
+
+    <div class="loader" id="loader">Loading Ad...</div>
+  </div>
+
+</div>
 
 <script>
-const video = document.getElementById("player");
+/* ---------------- TELEGRAM USER ---------------- */
+const tg = Telegram.WebApp;
+tg.ready();
 
-const STREAM =
-"https://hls-proxy.samaraedirisooriya123.workers.dev/?url=" +
-encodeURIComponent(
-  "https://d7.merichunidya.com:1686/hls/willowusa.m3u8?md5=uO4xAOa21opk2GMBh3-YaQ"
-);
+const user = tg.initDataUnsafe.user;
+document.getElementById("username").innerText = "@" + (user.username || "player");
 
-if (window.Hls && Hls.isSupported()) {
-  const hls = new Hls({
-    enableWorker: false,   // 🔥 fixes Edge / Telegram
-    lowLatencyMode: true
+/* ---------------- FIREBASE ---------------- */
+const firebaseConfig = {
+  apiKey: "AIzaSyBhwMJdFGmbxE8nAVKPyRJJzuHn6xmyI7Q",
+  authDomain: "cricketteligram.firebaseapp.com",
+  databaseURL: "https://cricketteligram-default-rtdb.firebaseio.com",
+  projectId: "cricketteligram"
+};
+
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+const userRef = db.ref("users/" + user.id);
+
+/* ---------------- INIT USER ---------------- */
+userRef.once("value").then(snap => {
+  if (!snap.exists()) {
+    userRef.set({
+      uid: user.id,
+      username: user.username || "",
+      name: user.first_name || "",
+      totalMinutes: 0,
+      totalEarnings: 0,
+      adViews: 0,
+      lastEarnedAt: Date.now()
+    });
+  }
+});
+
+userRef.on("value", snap => {
+  const d = snap.val();
+  document.getElementById("minutes").innerText = d.totalMinutes;
+  document.getElementById("earnings").innerText = d.totalEarnings.toFixed(2);
+});
+
+/* ---------------- REWARD LOGIC ---------------- */
+function reward(minutes) {
+  userRef.transaction(d => {
+    if (!d) return d;
+    d.totalMinutes += minutes;
+    d.adViews += 1;
+    d.totalEarnings += minutes * 0.02; // example
+    d.lastEarnedAt = Date.now();
+    return d;
   });
-  hls.loadSource(STREAM);
-  hls.attachMedia(video);
-} else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-  video.src = STREAM;
+}
+
+/* ---------------- ADS ---------------- */
+function watchRewarded() {
+  loader(true);
+  show_10340427().then(() => {
+    reward(2);
+    alert("🎉 You earned 2 minutes!");
+  }).finally(() => loader(false));
+}
+
+function watchPopup() {
+  loader(true);
+  show_10340427('pop').then(() => {
+    reward(1);
+    alert("🔥 You earned 1 minute!");
+  }).finally(() => loader(false));
+}
+
+function loader(show) {
+  document.getElementById("loader").style.display = show ? "block" : "none";
 }
 </script>
 
