--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body { margin: 0; font-family: 'Inter', sans-serif; background: linear-gradient(
 <body>
 <div class="app">
   <div class="header">
-    <h3>🏏 Cricket Rewards</h3>
+    <h3>🏏 Cricket Rewards samara</h3>
     <span id="username"></span>
   </div>
 
